name:                anychem2dock
version:             0.1
synopsis:            Tool to prepare ligand or receptor in any supported by openbabel format for docking.
description:         Please see README.md
homepage:            https://github.com/viviag/protutils#readme
license:             BSD3
license-file:        LICENSE
author:              Vit Guzeev
maintainer:          viviag@yandex.ru
copyright:           2017 Vitalii Guzeev
category:            Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable anychem2dock
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , anychem2dock
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/protutils
