name:                anychem2dock
version:             0.1
synopsis:            Tool to prepare ligand or receptor in any supported by openbabel format for docking.
description:         Please see README.md
homepage:            https://github.com/viviag/protutils#readme
license:             BSD3
license-file:        LICENSE
author:              Vit Guzeev
maintainer:          viviag@yandex.ru
copyright:           2017 Vitalii Guzeev
category:            Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable anychem2dock
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , foldl
                     , text
                     , system-filepath
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       RecordWildCards

source-repository head
  type:     git
  location: https://github.com/viviag/protutils
