name:                rescore-vina
version:             0.1
synopsis:            Tool to rescore vina results with rf-score-vs and report on it.
description:         Please see README.md
homepage:            https://github.com/viviag/protutils#readme
license:             BSD3
license-file:        LICENSE
author:              Vit Guzeev
maintainer:          viviag@yandex.ru
copyright:           2017 Vitalii Guzeev
category:            Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PDBQT
                       Options
                       Utils
                       TSV
                       Types
                       Report.IO
                       Report.Pure
  build-depends:       base >= 4.7 && < 5
                     , cassava
                     , turtle
                     , text
                     , bytestring
                     , vector
                     , foldl
                     , system-filepath
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       RecordWildCards

executable rescore-vina
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rescore-vina
                     , turtle
                     , foldl
                     , system-filepath
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       RecordWildCards
                       TypeApplications

source-repository head
  type:     git
  location: https://github.com/viviag/protutils
