name:                vina-utils
version:             0.1
synopsis:            Simple utils to work with Autodock vina
description:         Please see README.md
homepage:            https://github.com/viviag/protutils#readme
license:             BSD3
license-file:        LICENSE
author:              Vit Guzeev
maintainer:          viviag@yandex.ru
copyright:           2017 Vitalii Guzeev
category:            Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable runVina
  hs-source-dirs:      runVina
  main-is:             Main.hs
  build-depends:       base     >= 4  && < 5
                     , turtle
                     , ansi-terminal
                     , text
                     , foldl
                     , system-filepath
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       RecordWildCards

source-repository head
  type:     git
  location: https://github.com/viviag/protutils
